2024-03-24  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/gcm-test.c (test_main): Add a test case that triggers
	32-bit counter wraparound for gcm_aes256, and a larger 719 byte
	message.

2024-03-20  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/gcm-test.c (test_main): Add a test case that triggers
	32-bit counter wraparound for gcm_aes128.

2024-03-10  Niels Möller  <nisse@lysator.liu.se>

	From Daiki Ueno:
	* shake256.c (sha3_256_shake_output): New function, incremental
	shake256 output.
	* testsuite/shake256-test.c (test_incremental): New function, for
	testing sha3_256_shake_output.
	(test_main): Use it.

2024-03-10  Niels Möller  <nisse@lysator.liu.se>

	* poly1305-update.c (_nettle_poly1305_update): Explicitly check
	for empty input and return.

	* testsuite/testutils.c (test_aead): Test with associated split
	data into two pieces in different ways, respecting block
	boundaries. Also add a call to update(ctx, 0, NULL) in the
	middle, and encrypt and decrypt calls with empty input.

2024-03-08  Niels Möller  <nisse@lysator.liu.se>

	Fix ubsan issues for empty hash updates.
	* macros.h (MD_UPDATE): Check upfront if length is zero. Avoids
	calling memcpy(dst, NULL, 0), which is undefined behavior.
	* sha256.c (sha256_update): Likewise.
	* sha3.c (_nettle_sha3_update): Likewise.
	* testsuite/testutils.c (test_hash): Test with message split into
	two pieces in different ways, and also add an call to update(ctx,
	0, NULL) in the middle.

2024-02-16  Niels Möller  <nisse@lysator.liu.se>

	RSA-OAEP support contributed by Nicolas Mora and Daiki Ueno:
	* rsa-oaep-encrypt.c (_rsa_oaep_encrypt)
	(rsa_oaep_sha256_encrypt, rsa_oaep_sha384_encrypt)
	(rsa_oaep_sha512_encrypt): New file, new functions.
	* rsa-oaep-decrypt.c (_rsa_oaep_decrypt)
	(rsa_oaep_sha256_decrypt, rsa_oaep_sha384_decrypt)
	(rsa_oaep_sha512_decrypt): New file, new functions.
	* rsa.h: Declare new RSA OAEP functions.
	* rsa-internal.h: Declare internal RSA OAEP functions.