@@ -16,6 +16,8 @@ const char* hashes[] = {
   "sha256",
   "sha384",
   "sha512",
+  "sha512_224",
+  "sha512_256",
   "sha3_224",
   "sha3_256",
   "sha3_384",
